--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   "author": "Leo",
   "license": "MIT",
   "devDependencies": {
-    "http-server": "^0.8.5"
+    "angular": "^1.4.7",
+    "angular-mocks": "^1.4.7",
+    "http-server": "^0.8.5",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.14",
+    "karma-jasmine": "^0.3.6",
+    "karma-ng-html2js-preprocessor": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "phantomjs": "^1.9.18"
   }
 }
