--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "none",
   "main": "main.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node_modules/http-server/bin/http-server",
+    "test": "node_modules/karma/bin/karma start"
   },
   "author": "Leo",
   "license": "MIT",
